--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "MIT",
   "dependencies": {
     "git-commit-msg-linter": "^3.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.32",
+    "typescript": "^4.2.3"
   }
 }
