--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.32",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "eslint": "^7.21.0",
+    "eslint-config-standard-with-typescript": "11",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^5.0.0",
     "typescript": "^4.2.3"
   }
 }
