--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
+    "husky": "^5.1.3",
+    "lint-staged": "^10.5.4",
     "typescript": "^4.2.3"
   }
 }
