--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "git-commit-msg-linter": "^3.0.0"
   },
   "devDependencies": {
+    "@types/faker": "^5.1.7",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.32",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
@@ -27,6 +28,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4",
+    "faker": "^5.4.0",
     "husky": "^5.1.3",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
